<?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.vibehistorian.vibecomposer</groupId>
    <artifactId>vibecomposer</artifactId>
    <name>VibeComposer</name>
    <version>v1.9-beta</version>
    <packaging>jar</packaging>

    <repositories>
        <!-- The order of definitions matters. Explicitly defining central here to make sure it has the highest priority. -->

        <!-- Main Maven repository -->
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <!-- Main Maven repository -->
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
       <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.8.0</version>
		</dependency>
		       <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		    <version>3.11</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
		<dependency>
		    <groupId>com.formdev</groupId>
		    <artifactId>flatlaf</artifactId>
		    <version>1.1.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.formdev/flatlaf-swingx -->
		<dependency>
		    <groupId>com.formdev</groupId>
		    <artifactId>flatlaf-swingx</artifactId>
		    <version>1.1.1</version>
		</dependency>
		<dependency>
		    <groupId>com.sun.xml.bind</groupId>
		    <artifactId>jaxb-core</artifactId>
		    <version>2.3.0.1</version>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.3.1</version>
		</dependency>
		<dependency>
		    <groupId>com.sun.xml.bind</groupId>
		    <artifactId>jaxb-impl</artifactId>
		    <version>2.3.1</version>
		</dependency>
		<dependency>
		    <groupId>org.javassist</groupId>
		    <artifactId>javassist</artifactId>
		    <version>3.25.0-GA</version>
		</dependency>
		       
	
	     <dependency>
	     	<groupId>com.explodingart</groupId>
	     	<artifactId>jmusic</artifactId>
	     	<version>1.6.4.1</version>
	     </dependency>
	        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
		<dependency>
		    <groupId>ch.qos.logback</groupId>
		    <artifactId>logback-classic</artifactId>
		    <version>1.2.6</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.32</version>
		</dependency>
		
	        
    </dependencies>

<build>
  <plugins>
  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.1</version>
        <configuration>
            <source>1.8</source>
            <target>1.8</target>
        </configuration>
    </plugin>

    
    <plugin>
          <groupId>com.akathist.maven.plugins.launch4j</groupId>
          <artifactId>launch4j-maven-plugin</artifactId>
          <executions>
             <execution>
               <id>VibeComposer</id>
               <phase>package</phase>
               <goals><goal>launch4j</goal></goals>
               <configuration>
                 <headerType>gui</headerType>
                 <outfile>target/${project.name}-${project.version}-executable.exe</outfile>
                 <jar>target/${project.name}-${project.version}-JAR.jar</jar>
                 <errTitle>enccg</errTitle>
                 <classPath>
                   <mainClass>org.vibehistorian.vibecomposer.VibeComposerGUI</mainClass>
                 </classPath>
                 <jre>
                   <minVersion>1.8.0</minVersion>
                 </jre>
                 <versionInfo>
                   <fileVersion>1.1.1.1</fileVersion>
                   <txtFileVersion>1.1</txtFileVersion>
                   <fileDescription>VibeComposer</fileDescription>
                   <copyright>Copyright VibeHistorian 2021</copyright>
                   <productVersion>1.1.1.1</productVersion>
                   <txtProductVersion>1.1</txtProductVersion>
                   <productName>VibeComposer</productName>
                   <internalName>VibeComposer</internalName>
                   <originalFilename>VibeComposer.exe</originalFilename>
                 </versionInfo>
               </configuration>
             </execution>
          </executions>
        </plugin>
        
            
    <plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <configuration>
        <archive>
          <manifest>
            <mainClass>org.vibehistorian.vibecomposer.VibeComposerGUI</mainClass>
          </manifest>
        </archive>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
        <finalName>${project.name}-${project.version}-JAR</finalName>
        <appendAssemblyId>false</appendAssemblyId>
                <source>1.8</source>
                <target>1.8</target>
      </configuration>
    </plugin>
  </plugins>
</build>

</project>